--- a/molecule/converge.yml
+++ b/molecule/converge.yml
@@ -17,9 +17,9 @@
     - fluencelabs.provider
 
   tasks:
-    # - name: Run nox role
-    #   include_role:
-    #     name: nox
+    - name: Run nox role
+      include_role:
+        name: nox
 
     - name: Run promtail role
       include_role:
