--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,22 @@ jobs:
           RELEASE_PLEASE_OUTPUT: ${{ toJSON(steps.release.outputs) }}
         run: echo "${RELEASE_PLEASE_OUTPUT}" | jq
 
+  galaxy:
+    if: needs.release-please.outputs.release-created
+    runs-on: ubuntu-latest
+    needs:
+      - release-please
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ need.release-please.outputs.tag }}
+
+      - name: Push to galaxy
+        uses: artis3n/ansible_galaxy_collection@v2
+        with:
+          api_key: "${{ secrets.GALAXY_API_KEY }}"
+
   slack:
     if: always()
     name: "Notify"
@@ -41,6 +57,7 @@ jobs:
 
     needs:
       - release-please
+      - galaxy
 
     permissions:
       contents: read
