Use s3 to download ccp artifact

--- a/roles/ccp/vars/main.yml
+++ b/roles/ccp/vars/main.yml
@@ -7,6 +7,6 @@ _arch: "{{ _arch_map[ansible_architecture] }}"
 _semver_regex: "^v?\\d+\\.\\d+\\.\\d+$"
 
 _ccp_version: "{{ ccp_version | regex_replace('^(?!v)', 'v') }}"
-_ccp_download_url: "https://github.com/fluencelabs/capacity-commitment-prover/releases/download/ccp-{{ _ccp_version }}"
+_ccp_download_url: "https://fluence-artifacts.s3.eu-west-1.amazonaws.com/ccp/{{ _ccp_version }}"
 _ccp_checksums: "sha256:{{ _ccp_download_url + '/ccp_SHA256_SUMS' }}"
 _ccp_bin: "ccp-{{ _arch }}"
