fix!: rename role to omit - sign that annoys galaxy

--- a/roles/vmsandboxing/meta/main.yml
+++ b/roles/vmsandboxing/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   namespace: fluencelabs
-  role_name: vm-sandboxing
+  role_name: vm_sandboxing
   license: Apache-2.0
   author: Roman Nozdrin
   description: Install and setup Fluence-specific VM sandboxing method
