--- a/roles/vmsandboxing/defaults/main.yml
+++ b/roles/vmsandboxing/defaults/main.yml
@@ -1,11 +1,11 @@
-remote_host: info-catcher.fluence.dev
+vm_remote_host: info-catcher.fluence.dev
 vm_name: sandbox
 vm_image_url: https://fluence-os-images.fra1.digitaloceanspaces.com/sandbox/latest/image.qcow2
 vm_image_local_path: /var/lib/libvirt/qemu/images/{{ vm_name }}.qcow2
-libvirt_user: libvirt-qemu
-libvirt_group: kvm
-bridge_name: br422442
-physical_iface: "dummy0"  # Physical network interface to be added to the bridge # TBD
+vm_libvirt_user: libvirt-qemu
+vm_libvirt_group: kvm
+vm_bridge_name: br422442
+# vm_physical_iface: "dummy0"  # Physical network interface to be added to the bridge # TBD
 vm_mac: "{{ '52:54:00' | community.general.random_mac(seed=inventory_hostname) }}"
 vm_uuid: "{{ '123' | to_uuid }}"
 vm_ram: 1048576  # RAM size in KiB (1 GiB)
@@ -38,4 +38,3 @@ vm_template: |
       </console>
     </devices>
   </domain>
-
