Download snapshot from s3

--- a/roles/ccp/tasks/01-install.yml
+++ b/roles/ccp/tasks/01-install.yml
@@ -80,7 +80,7 @@
 
     - name: download snapshot
       vars:
-        _snapshot_download_url: "https://files.fluence.dev/api/buckets/fluence-artifacts/objects/ccp/snapshots/{{ ccp_branch }}/{{ _ccp_bin }}"
+        _snapshot_download_url: "https://fluence-artifacts.s3.eu-west-1.amazonaws.com/ccp/snapshots/{{ ccp_branch }}/{{ _ccp_bin }}"
       ansible.builtin.get_url:
         url: "{{ _snapshot_download_url }}"
         dest: "{{ _snapshot_temp_dir.path }}/{{ _ccp_bin }}"
