--- a/roles/vmsandboxing/tasks/00-preflight.yml
+++ b/roles/vmsandboxing/tasks/00-preflight.yml
@@ -52,47 +52,10 @@
       - vm_libvirt_group | length
     quiet: true
 
-- name: check "vm_bridge_name" variable
+- name: check "vm_iptables_map" variable
   tags: always
   ansible.builtin.assert:
     that:
-      - vm_bridge_name is defined
-      - vm_bridge_name is string
-      - vm_bridge_name | length
-    quiet: true
-
-- name: check "vm_physical_iface" variable
-  tags: always
-  ansible.builtin.assert:
-    that:
-      - vm_physical_iface is defined
-      - vm_physical_iface is string
-      - vm_physical_iface | length
-    quiet: true
-
-- name: check "vm_mac" variable
-  tags: always
-  ansible.builtin.assert:
-    that:
-      - vm_mac is defined
-      - vm_mac is string
-      - vm_mac | length
-    quiet: true
-
-- name: check "vm_uuid" variable
-  tags: always
-  ansible.builtin.assert:
-    that:
-      - vm_uuid is defined
-      - vm_uuid is string
-      - vm_uuid | length
-    quiet: true
-
-- name: check "vm_ram" variable
-  tags: always
-  ansible.builtin.assert:
-    that:
-      - vm_ram is defined
-      - vm_ram is string
-      - vm_ram | length
+      - vm_iptables_map is defined
+      - vm_iptables_map | length
     quiet: true
