--- a/molecule/vm/molecule.yml
+++ b/molecule/vm/molecule.yml
@@ -2,7 +2,7 @@ driver:
   name: docker
 
 platforms:
-  - name: k3s
+  - name: ubuntu-vm
     dockerfile: Dockerfile
     image: libvirt
     pre_build_image: false
