--- a/roles/vmsandboxing/meta/main.yml
+++ b/roles/vmsandboxing/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   namespace: fluencelabs
-  role_name: vm_sandboxing
+  role_name: vmsandboxing
   license: Apache-2.0
   author: Roman Nozdrin
   description: Install and setup Fluence-specific VM sandboxing method
@@ -11,11 +11,6 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - jammy
-    - name: Debian
-      versions:
-        - bookworm
 
   galaxy_tags:
     - fluence
-    - web3
-
