--- a/molecule/vm/molecule.yml
+++ b/molecule/vm/molecule.yml
@@ -7,6 +7,7 @@ platforms:
     image: libvirt
     pre_build_image: false
     privileged: true
+    command: ["/usr/bin/tini", "/usr/sbin/libvirtd"]
     devices:
       - /dev/kvm:/dev/kvm
     volumes:
