--- a/roles/vmsandboxing/tasks/03-bootstrap-vm.yml
+++ b/roles/vmsandboxing/tasks/03-bootstrap-vm.yml
@@ -6,6 +6,11 @@
     owner: "{{ vm_libvirt_user }}"
     group: "{{ vm_libvirt_group }}"
 
+- vars:
+    _vm_options: "{{ vm_options + [{'host_devices': vm_host_devices}] }}"
+  debug:
+    msg: "{{ _vm_options }}"
+
 - name: Create a new libvirt domain
   vars:
     _vm_options: "{{ vm_options + [{'host_devices': vm_host_devices}] }}"
